trying to fix date position mobile

--- a/webapp/css/mobile.css
+++ b/webapp/css/mobile.css
@@ -5,34 +5,31 @@
 }
 
 .mobiledate{
-    margin: auto; 
-    width: 70%; 
-    height: 20%; 
+    border: 0;
+    margin: auto;
+    width: 80%;
+    height: 10vw;
     border-radius: 3em; 
-    border: solid 2px #77AAE3; 
+    /*border: solid 2px #77AAE3; */
 }
 
 /* Left date arrow */
-#m-leftdate{
-    float:left; 
-    top: 50%;
-    left: 0.15em;
-    padding-left:0.1em;
+#m-leftdate{ 
+    float: left;
+
 }
 
 /* Date text */
 .m-datetext{
-    margin-left: auto;
-    margin-right:auto;
-    top: .3em;
+    padding-top: 0.7em;
+    font-size: 4vw;
     text-align: center;
+
 }
 
 /* Right date arrow */
 #m-rightdate {
-    float: right;
-    top: 50%;
-    right: 0.15em;
+
 }
 
 /*panel stuff*/
